 * Cleanup in the Cisco 3560's code and documentation
 * Startup performance improvements
 * Added support for session-keyfile introduced in BIND 9.7 (#1257)
 * Several improvements in the dhcp_dumper.pl addon
 * Global option to disable rogue DHCP server detection
 * Performance improvements to pfdhcplistener
 * More startup validation on SNMPv3 Trap configuration
 * CentOS 6.2 support

Bug Fixes
 * Slashes (/) not allowed in person id (#1322)
 * Inline: isolation not properly enforced by firewall if registration is disabled (#1330)
 * Several small fixes in pfdhcplistener 
 * Inline: NAT out behavior of PacketFence was changed for the best
 * Keep IP to MAC associations across restarts (#1343)
 * Interface enforcement is now configurable through Web UI / CLI (#1335)
 * Violation charts now show proper values
 * Captive portal error "0" when no password is provided
 * Interim fixes: #1349

--------------------------------------------------------------------------------
Version <release> released on <releaseDate>

Enhancements
 * Several new DHCP fingerprints (from our spinoff www.fingerbank.org)
 * Better support of WISPr (captive portal detection)
 * Configuration flag to disable the captive portal's network detection feature
 * Added support for months in normalize_time (#1291)

Bug Fixes
 * Local SNMP Trap handler now configured by default

--------------------------------------------------------------------------------
Version 3.0.3 released on 2011-11-21

New Hardware Support
 * Cisco Catalyst 6500 series switches in port-security
 * HP Procurve 5400 now supporting mac auth and 802.1x (with VoIP)

Enhancements
 * Performance improvements under stressed workloads
 * Translatable remediation templates (if a translated version exists, it'll override the default)
 * Guest management interface can be translated
 * More documentation for service watch
 * Eliminated some unnecessary warnings
 * Better help in the web admin UI